--- a/02.html
+++ b/02.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>지구 온난화 데이터 분석 보고서 (2020~2024)</title>
+    <title>지구 온난화 데이터 분석 보고서 (2020-2024)</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -58,6 +58,31 @@
             -webkit-text-fill-color: transparent;
             background-image: linear-gradient(to right, #FF5252, #FF9800);
         }
+
+        /* Home Button Style */
+        .home-btn {
+            position: fixed;
+            top: 1.5rem;
+            left: 1.5rem;
+            z-index: 50;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.6rem 1rem;
+            background-color: white;
+            border: 1px solid #e5e7eb;
+            border-radius: 9999px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            font-weight: 700;
+            color: #263238;
+            transition: all 0.2s;
+            text-decoration: none;
+        }
+        .home-btn:hover {
+            background-color: #f9fafb;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transform: translateY(-1px);
+        }
     </style>
     <!-- 
         Selected Palette: "Modern Magma" (Vibrant & Alert)
@@ -81,6 +106,12 @@
     -->
 </head>
 <body class="p-4 md:p-8">
+
+    <!-- Home Button -->
+    <a href="index.html" class="home-btn">
+        <span>🏠</span>
+        <span>홈으로</span>
+    </a>
 
     <div class="max-w-7xl mx-auto space-y-12">
 
