--- a/03.html
+++ b/03.html
@@ -59,26 +59,37 @@
 
         section { padding: 80px 0; }
 
-        .btn-home {
+        /* Floating Navigation Buttons - Moved to Top Left */
+        .floating-nav {
             position: fixed;
-            bottom: 30px;
-            right: 30px;
+            top: 30px;
+            left: 30px;
             z-index: 100;
-            width: 56px;
-            height: 56px;
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        .nav-btn {
+            width: 48px;
+            height: 48px;
             background: white;
-            border-radius: 18px;
+            border-radius: 14px;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
             cursor: pointer;
             transition: all 0.3s ease;
+            color: #1d1d1f;
+            text-decoration: none;
+            border: 1px solid rgba(0, 0, 0, 0.05);
         }
 
-        .btn-home:hover { 
+        .nav-btn:hover { 
             background: var(--primary);
             color: white;
+            transform: scale(1.05);
         }
 
         .danger-badge {
@@ -95,8 +106,16 @@
 <body class="antialiased">
     <div class="bg-soft-glow"></div>
 
-    <div class="btn-home" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
-        <i class="fa-solid fa-arrow-up"></i>
+    <!-- Floating Navigation (Top Left) -->
+    <div class="floating-nav">
+        <!-- 홈으로 가기 버튼 -->
+        <a href="portfolio_landing.html" class="nav-btn" title="홈으로 이동">
+            <i class="fa-solid fa-house text-lg"></i>
+        </a>
+        <!-- 상단으로 이동 버튼 -->
+        <div class="nav-btn" onclick="window.scrollTo({top: 0, behavior: 'smooth'})" title="상단으로 이동">
+            <i class="fa-solid fa-arrow-up text-lg"></i>
+        </div>
     </div>
 
     <!-- Hero Section -->
