--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             
             <!-- NEW Project: K-Pop Demon Hunters -->
-            <a href="kpop_demon_hunters.html" class="glass-card rounded-3xl p-8 group stagger-in border-blue-500/30" style="animation-delay: 0.15s">
+            <a href="05.html" class="glass-card rounded-3xl p-8 group stagger-in border-blue-500/30" style="animation-delay: 0.15s">
                 <div class="w-14 h-14 bg-pink-500/20 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
                     <i class="fa-solid fa-music text-pink-400 text-2xl"></i>
                 </div>
